; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddInt64.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddInt64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VALUE_INT64 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PackAddInt64(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %3
  store i32* null, i32** %4, align 8
  br label %29

16:                                               ; preds = %12
  %17 = load i32, i32* %7, align 4
  %18 = call i32* @NewInt64Value(i32 %17)
  store i32* %18, i32** %8, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* @VALUE_INT64, align 4
  %21 = call i32* @NewElement(i8* %19, i32 %20, i32 1, i32** %8)
  store i32* %21, i32** %9, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %9, align 8
  %24 = call i32 @AddElement(i32* %22, i32* %23)
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %16
  store i32* null, i32** %4, align 8
  br label %29

27:                                               ; preds = %16
  %28 = load i32*, i32** %9, align 8
  store i32* %28, i32** %4, align 8
  br label %29

29:                                               ; preds = %27, %26, %15
  %30 = load i32*, i32** %4, align 8
  ret i32* %30
}

declare dso_local i32* @NewInt64Value(i32) #1

declare dso_local i32* @NewElement(i8*, i32, i32, i32**) #1

declare dso_local i32 @AddElement(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
